# quneiform

./: .clang-tidy  .gitignore  .typos.toml  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: clang_tidy_html_report.py
.github/workflows/: clang-format-check.yml  clang-tidy.yml  codeql.yml  cppcheck.yml  doxygen.yml  i18n-check.yml  linux-build.yml  macOS build.yml  macos-unit-test.yml  msvc.yml  msw-build.yml  msw-unit-tests.yml  spell-check.yml  typos.yml  unit-tests.yml
docs/manual/: LegrandOrangeBook.cls  _quarto.yml  _quarto.yml.in  acknowledgements.qmd  building.qmd  cites.bib  index.qmd  suppression.qmd
docs/manual/command-line/: checks.qmd  options.qmd  reviewing-output.qmd
docs/manual/gui/: editing.qmd  new-project.qmd  options.qmd  reviewing-output.qmd  tools.qmd
docs/manual/issues/: i18n-issues.qmd  mulitpart-strings.qmd
docs/manual/latex/: creative-commons.tex  default.tex  indexstyles.ist  preamble.tex  titlepage.tex
gui/: CMakeLists.txt
installers/unix/AppDir/: quneiform.desktop.in
installers/unix/AppDir/usr/share/metainfo/: quneiform.appdata.xml.in
installers/windows/: icons.isl.in  lang.isl  quneiform.iss.in  setup.isl.in
installers/windows/messages/: messages-de.isl  messages-en.isl  messages-es.isl  messages-fr.isl  messages-ja.isl  messages-pt.isl  messages-ru.isl
src/: analyze.cpp  analyze.h  char_traits.h  cpp_i18n_review.cpp  cpp_i18n_review.h  csharp_i18n_review.cpp  csharp_i18n_review.h  donttranslate.h  extract_text.h  i18n_review.cpp  i18n_review.h  i18n_string_util.cpp  i18n_string_util.h  info_plist_review.cpp  info_plist_review.h  input.cpp  input.h  main.cpp  po_file_review.cpp  po_file_review.h  pseudo_translate.cpp  pseudo_translate.h  quarto_review.cpp  quarto_review.h  rc_file_review.cpp  rc_file_review.h  string_util.h  translation_catalog_review.cpp  translation_catalog_review.h
src/gui/: app_options.cpp  app_options.h  convert_string_dlg.cpp  convert_string_dlg.h  datamodel.cpp  datamodel.h  i18napp.cpp  i18napp.h  i18nframe.cpp  i18nframe.h  insert_translator_comment_dlg.cpp  insert_translator_comment_dlg.h  insert_transmacro_dlg.cpp  insert_transmacro_dlg.h  insert_warning_suppression_dlg.cpp  insert_warning_suppression_dlg.h  projectdlg.cpp  projectdlg.h  string_info_dlg.cpp  string_info_dlg.h
tests/: CMakeLists.txt  cpptests.cpp  i18nstringtests.cpp  potests.cpp  quartotests.cpp  stringutiltests.cpp
